--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Pacifico&family=Playfair+Display&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -38,7 +39,7 @@
             <div class="container home-container">
                 <div class="home-content">
                     <h2 class="heading-two">Pompeo POttery</h2>
-                    <h1 class="heading-one">Unique Porcelain <span>&</span> <br> Stone Collection</h1>
+                    <h1 class="heading-one">Unique Porcelain <span class="and-span">&</span> <br> Stone Collection</h1>
                     <p class="text-small">Unique & modern pottery made by our master in porcelain & stones</p>
                     <a class="main-link" href="#">Shop Collection</a>
                 </div>
@@ -71,6 +72,61 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </section>
+
+        <section class="collection">
+            <div class="container">
+                <div class="tags">
+                    <h2 class="heading-two">Our online store</h2>
+                    <h1 class="heading-one">Pottery Collection</h1>
+                </div>
+                <ul class="collection-items">
+                    <li class="collection-item">
+                        <img src="images/Frame-1.png" alt="">
+                        <p>Decor Plate</p>
+                        <span class="money-span">$ 65.00 USD</span>
+                    </li>
+                    <li class="collection-item">
+                        <img src="images/Frame.png" alt="">
+                        <p>Mint Pottery</p>
+                        <span class="money-span">$ 75.00 USD</span>
+                    </li>
+                    <li class="collection-item">
+                        <img src="images/Frame-2.png" alt="">
+                        <p>Set Of Potterys</p>
+                        <span class="money-span">$ 125.00 USD</span>
+                    </li>
+                </ul>
+                <ul class="collection-items">
+                    <li class="collection-item">
+                        <img src="images/Frame-3.png" alt="">
+                        <p>Orange Ceramic</p>
+                        <span class="money-span">$ 55.00 USD</span>
+                    </li>
+                    <li class="collection-item">
+                        <img src="images/Frame-4.png" alt="">
+                        <p>Dark Bowl</p>
+                        <span class="money-span">$ 115.00 USD</span>
+                    </li>
+                    <li class="collection-item">
+                        <img src="images/Frame-5.png" alt="">
+                        <p>Square Pottery</p>
+                        <span class="money-span">$ 75.00 USD</span>
+                    </li>
+                </ul>
+                <div class="link">
+                    <a class="main-link" href="#">View All Products</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="shopping">
+            <div class="container">
+                <h2 class="heading-two">Pompeo POttery</h2>
+                <h1 class="heading-one">Ready to start shopping?</h1>
+                <p class="text-small font-bold ">Lorem ipsum dolor sit amet, consectetur adipiscing elit . <br> Suspendisse varius enim in eros elementum.</p>
+                <a class="main-link" href="#">New Collection</a>
             </div>
         </section>
 
